# ChimeraX-XR3D

./: .gitignore  README.md  bundle_info.xml  install_dev.py  pyproject.toml  xr_screens_base.py
src/: __init__.py  backing_window.py  cursor3d.py
